--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,14 @@
          <link rel="stylesheet" href="style.css">
  
     </head>
-    <body style="background-image: url(images/My\ background\ image\ 3.png);">
+    <body style="background-image: url(images/Background.png);">
      <nav>    
           <a  href="index.html">Home</a>
           <a  href="about.html"> About</a>
+          <a href="project.html">Projects</a>
           <a  href="contact.html">Contact Me</a>
-      </nav>   
+           
+      </nav>  
+      <h1>Contact Me</h1> 
     </body>
 </html>
