Fix HTML structure and formatting issues

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 </section>
     <br><br><br><br>
    
-    <body>
+  
 
   <div class="main-container">
 
@@ -60,17 +60,17 @@
     <div class="card">
       <h2>Education</h2>
       <ul>
-       <p> BS Artificial Intelligence (2025-2029)</p>
+       <p><strong>BS Artificial Intelligence (2025-2029)</strong></p>
        <li>Punjab University</li>
        <li>Building a strong foundation in programming, problem-solving, and AI concepts</li> 
       <li>Actively learning C++, HTML, and logical thinking</li>  
 
-      <p>FSc Pre-Medical</p>
+      <p><strong>FSc Pre-Medical</strong></p>
       <li>Punjab Group of Colleges</li>  
       <li> Studied Biology, Chemistry, and Physics</li>  
  <li>Developed analytical thinking and a scientific approach to problem-solving</li>  
 
- <p>Matriculation (Science)</p>
+ <p><strong>Matriculation (Science)</strong></p>
 <li>The Trust School</li>  
 <li>Early exposure to science and technology</li>
       </ul>
@@ -78,7 +78,7 @@
 
   </div>
 
-</body>
+
 
  </body>
  
