--- a/project.html
+++ b/project.html
@@ -15,15 +15,23 @@
       </nav> 
         <h1>My Projects</h1>
        
-        <div class="single-box" >
+       <div class="card">
         <h6>Personal Portfolio Website</h6>
-        <p><strong>Tech:</strong> HTML, CSS, JavaScript, VS Code, GitHub Pages</p> <br>
-        <p>Built and designed my own personal portfolio website from scratch.
-         Focused on clean layout, responsiveness, and usability. Implemented structured HTML,
-          modern CSS styling, and live testing during development. This project helped me understand 
-          real-world web workflow — from design to deployment. </p></div>
-        <br>  <br>
-        
+        <p><strong>Project Overview</strong> <br>This is a personal portfolio website that I built and deployed using GitHub Pages.
+           The purpose of this project is to create an online presence that showcases who I am, what I'm learning,
+         . It acts as my digital resume — easily shareable with recruiters, employers, or collaborators.
+          <br><strong>About the Website</strong><br>The site introduces me and highlights my skills, educational background, and development interests. It also includes links to my projects, a downloadable resume, and a contact section to connect with visitors. You can navigate between pages like Home, About, Projects, and Contact Me using the navbar.
+        <br><strong>Key Features</strong><br>Clean, Responsive Design — Optimized for readability and ease of use.
+        Skills Section — Shows web development skills and tools you're familiar with. 
+
+
+
+
+Resume Download — Link to download a professional resume. 
+Navigation Menu — Easy one-click access to different sections. </p>
+
+       </div>
+        <br>
         <a href="https://zohatanveer789.github.io/ZohaTanveer786.github.io/">
         <button>Click here for a demo</button></a>
     </body>
