Refactor key features section in project.html

--- a/project.html
+++ b/project.html
@@ -24,10 +24,10 @@
             <p><strong>About the Website</strong><br>The site introduces me and highlights my skills, educational background, and development interests. It also includes links to my projects, a downloadable resume, and a contact section to connect with visitors. You can navigate between pages like Home, About, Projects, and Contact Me using the navbar.</p>
             <br>
             <p><strong>Key Features</strong><br>
-            1. Clean, Responsive Design — Optimized for readability and ease of use.<br>
-            2. Skills Section — Shows web development skills and tools you're familiar with.<br>
-            3. Resume Download — Link to download a professional resume.<br>
-            4. Navigation Menu — Easy one-click access to different sections.</p>
+             Clean, Responsive Design — Optimized for readability and ease of use.<br>
+             Skills Section — Shows web development skills and tools you're familiar with.<br>
+             Resume Download — Link to download a professional resume.<br>
+             Navigation Menu — Easy one-click access to different sections.</p>
     
            </div>
        </div>
