Revise homepage content and project details
Updated the content and structure of the homepage to enhance clarity and provide more detailed project descriptions.

--- a/index.html
+++ b/index.html
@@ -94,19 +94,25 @@
    <br><br>
    <h1>My Projects</h1>
        
-   <div class="main-container">
-        <div class="single-box" style="width: 100%;">
+       <div class="main-container">
+           <div class="card" style="max-width: 800px;">
             <h6>Personal Portfolio Website</h6>
-            <p><strong>Tech:</strong> HTML, CSS, JavaScript, VS Code, GitHub Pages</p> <br>
-            <p>Built and designed my own personal portfolio website from scratch.
-             Focused on clean layout, responsiveness, and usability. Implemented structured HTML,
-              modern CSS styling, and live testing during development. This project helped me understand 
-              real-world web workflow — from design to deployment. </p>
-        </div>
-    </div>
+            <p><strong>Project Overview</strong> <br>This is a personal portfolio website that I built and deployed using GitHub Pages.
+               The purpose of this project is to create an online presence that showcases who I am, what I'm learning.
+             It acts as my digital resume — easily shareable with recruiters, employers, or collaborators.</p>
+             <br>
+            <p><strong>About the Website</strong><br>The site introduces me and highlights my skills, educational background, and development interests. It also includes links to my projects, a downloadable resume, and a contact section to connect with visitors. You can navigate between pages like Home, About, Projects, and Contact Me using the navbar.</p>
+            <br>
+            <p><strong>Key Features</strong><br>
+             Clean, Responsive Design — Optimized for readability and ease of use.<br>
+             Skills Section — Shows web development skills and tools you're familiar with.<br>
+             Resume Download — Link to download a professional resume.<br>
+             Navigation Menu — Easy one-click access to different sections.</p>
+    
+           </div>
+       </div>
         <br>
         <a href="https://zohatanveer789.github.io/ZohaTanveer786.github.io/" target="_blank">
         <button>Click here for a demo</button></a>
-        <br><br>
   </body>
 </html>
