--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
                 <br>
 
             <div class="social-links">
-              <a href="https://linkedin.com" target="_blank">
+              <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank">
               <img src="images/linkdin-logo.png"alt="LinkedIn">
                </a>
-               <a href="https://github.com" target="_blank">
+               <a href=https://github.com/zohatanveer789" target="_blank">
               <img src="images/github-logo.png" alt="GitHub">
              </a>
-              <a href="mailto:example@email.com">
+              <a href=""mailto:zohatanveer2006@gmail.com">
              <img src="images/e mail-logo.png" alt="Email">
               </a>
             </div>
@@ -162,3 +162,4 @@
         </div>
   </body>
 </html>
+
