--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank">
               <img src="images/linkdin-logo.png"alt="LinkedIn">
                </a>
-               <a href=https://github.com/ZohaTanveer789" target="_blank">
+               <a href="https://github.com/zohatanveer789" target="_blank">
               <img src="images/github-logo.png" alt="GitHub">
              </a>
               <a href=""mailto:zohatanveer2006@gmail.com">
@@ -162,5 +162,6 @@
         </div>
   </body>
 </html>
+
 
 
