--- a/about.html
+++ b/about.html
@@ -137,14 +137,14 @@
  <h1>My Journey</h1>
  <div class="main-container-journey">
  <div class="about-card" style="background-color:#DBC2A6;">
- <p> <br>  My journey didn't start with a master plan. I started by breaking things, fixing them,
+ <p >   My journey didn't start with a master plan. I started by breaking things, fixing them,
  and asking 'why' a lot. <br>I grew up as a quiet, observant kid. I spoke less and noticed more — learning by watching patterns, listening carefully, and understanding things before reacting to them. Curiosity was always there, even when I couldn't clearly name what I wanted to do with. <br>
  As I moved through school, that uncertainty became more real. Unsure about my exact path, I chose pre-medical, hoping clarity would come with time. Instead, it taught me something important: while medicine interested me, I was more drawn to the problem-solving, logic, and technology. <br> Behind 
  That realization slowly pulled me toward the AI side of medical sciences — where data, algorithms, and technology meet real human impact. Understanding that connection helped things finally make sense.<br>
  The academic road wasn't smooth. Getting the required scores to enter Punjab University came with pressure and doubt, and there were moments when I wasn't sure I'd make it. But persistence mattered more than certainty, and eventually that effort paid off.
  <br>Now, as a first-semester student at Punjab University, I'm building my foundation in programming, digital logic, and web development — skills that align with my long-term interest in applying AI to healthcare. I'm early in the journey, learning patiently, improving steadily, and trusting the process. 
- I don't have everything figured out yet — but I've found the direction that fits me, and that's enough to keep moving forward.   <br>
-     I am still writing my story, but I now have the clarity and tools to make every chapter count. <br>                                                           
+ I don't have everything figured out yet — but I've found the direction that fits me, and that's enough to keep moving forward.  <br>
+     I am still writing my story, but I now have the clarity and tools to make every chapter count. 
   </p>
 </div>
 
@@ -158,25 +158,95 @@
   <p style="font-style: italic;">"Everything you can imagine is real"</p>
   </div>
 
- <div class="hobby-card">
- <p><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zoha_tanveer" target="_blank"><button style="font-size: 14px; padding: 10px 20px;">Check it out</button></a></p>
+ 
 
+</div>
+
+ <div class="main-container-journey">
+<div class="hobby-card" style="background-color: #a4a5a4;">
+ <p ><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zoha_tanveer" target="_blank" style="color: black; text-decoration: none;"><strong>Check it out</strong></a></p>
+
+ </div>
+ <div class="hobby-card" style="background-color:#E6D3B1;">
+   <p style="font-style: italic;text-indent: 30px; font-size: 1.3rem;">“Code, coffee, chaos, and a quiet hope that things will make sense tomorrow.”</p>
  </div>
 
 </div>
-<div class="working">
+
+<div class="card">
    <p><strong>Currently Working On:</strong></p>
    <ul>
-   <li>Building foundational skills in AI and computer science at Punjab University</li>
+   <li>Building foundational skills in AI and computer science at PUCIT</li>
    <li>Creating responsive websites using HTML and CSS</li>
    <li>Learning C++ programming and basic data structures</li>
    <li>Exploring AI applications in healthcare and other fields</li>
    </ul>
+   </div>
+   
+<div class="card" style="width: fit-content;background-color: #9c703e;">
+   <p><strong>Things i am proud of (Not Perfect)</strong></p>
+   <ul>
+      <li>Built my first website from scratch</li>
+      <li>Figured out GitHub after fighting it for 3 hours</li>
+      <li>Kept going even when the path made zero sense</li>
+   </ul>
 </div>
-
- 
- 
-
-
+<div class="card" style="width: fit-content;background-color: #949193;">
+   <p><strong>🎮 “Side Quests”</strong></p>
+   <ul>
+      <li>Edited videos and learned storytelling through cuts</li>
+      <li>Designed small UI pieces just for fun</li>
+      <li>Helped people with tech stuff and felt powerful</li>
+      
+   </ul>
+</div>
+</div>
 </body>
+
+<footer style="background-color: burlywood;border-radius: 20px;">
+    <div class="footer-container">
+    <div class="footer-card">
+        <h2>Send a Message</h2>
+        <form action="https://formspree.io/f/mwvelqol" method="POST" class="contact-form">
+            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+            <input type="hidden" name="_next" value="https://zohatanveer789.github.io/ZohaTanveer786.github.io/contact.html">
+            <button type="submit">Send Message</button>
+        </form>
+    </div>
+
+    <div class="footer-card">
+        <h2>Connect With Me</h2>
+        <p>Feel free to reach out via email or follow my professional journey online.</p>
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank"><img src="images/linkdin-logo.png" alt="LinkedIn"></a>
+            <a href="https://github.com/zohatanveer789" target="_blank"><img src="images/github-logo.png" alt="GitHub"></a>
+            <a href="mailto:zohatanveer2006@gmail.com"><img src="images/e mail-logo.png" alt="Email"></a>
+        </div>
+        <div class="links">
+            <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank"><button>LinkedIn</button></a>
+            <a href="https://github.com/zohatanveer789" target="_blank"><button>GitHub</button></a>
+            <a href="mailto:zohatanveer2006@gmail.com"><button>E-mail</button></a>
+        </div>
+    </div>
+
+    <div class="footer-card">
+        <h2>Go Back</h2>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#main-container-journey">Contact Me</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+        </ul>
+    </div>
+</div>
+    <p class="copyright" style="text-align: center;">&copy; 2025 Zoha Tanveer. All rights reserved.</p>
+</footer>
+
+
+  
+
+
+
 </html>
