--- a/about.html
+++ b/about.html
@@ -11,10 +11,12 @@
 <body style="background-image: url(images/Background.png);">
  
  <nav> 
- <a href="index.html">Home</a>
- <a href="about.html">About</a>
- <a href="project.html">Projects</a>
- <a href="contact.html">Contact Me</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About Me</a>
+        <a href="#skills-section">Skills</a>
+        <a href="#journey-section">My Journey</a>
+        <a href="project.html">Projects</a>
+        <a href="contact.html">Contact</a>
  </nav>  
  
 <section id="about-section">
@@ -22,7 +24,7 @@
  <div class="about-image-wrapper">
 <img src="images/My image.jpg" alt="About Zoha">
  </div>
-
+ 
  <div class="single-box">
  <h2>About Me</h2>
  <p>
@@ -30,17 +32,18 @@
  Currently diving into AI and computer science, I enjoy mixing logic with creativity to make things that work and look good doing it. 
  From coding late at night to learning new tools just because they exist, I believe growth comes from experimenting, failing fast, and trying again.
  I'm not here to follow the crowd, I'm here to learn deeply, build boldly, and keep leveling up.
- </p>
+ </p> </section> 
+ </div>
  </div>
  </div>
 
- </section> 
+
 
 <a href="images/Resume.pdf" download><button>Download Resume</button></a>
 
-
+ 
  <br><br>
-
+  <section id="education-section">
  <h1>Educational Background</h1>
 
  <div class="main-container">
@@ -72,7 +75,8 @@
 </div>
 
  </div>
- 
+ </section>
+ <section id="skills-section">
 
  <h1>Early Skills, Big Intentions</h1>
 
@@ -133,7 +137,8 @@
 
 
  </div>
- 
+ </section>
+ <section id="journey-section">
  <h1>My Journey</h1>
  <div class="main-container-journey">
  <div class="about-card" style="background-color:#DBC2A6;">
@@ -164,7 +169,7 @@
 
  <div class="main-container-journey">
 <div class="hobby-card" style="background-color: #a4a5a4;">
- <p ><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zoha_tanveer" target="_blank" style="color: black; text-decoration: none;"><strong>Check it out</strong></a></p>
+ <p ><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zunzet____?utm_source=qr&igsh=YjVidmk5OWpueGZu" target="_blank" style="color: black; text-decoration: none;"><strong>Check it out</strong></a></p>
 
  </div>
  <div class="hobby-card" style="background-color:#E6D3B1;">
@@ -172,7 +177,7 @@
  </div>
 
 </div>
-
+<section id="Working-section">
 <div class="card">
    <p><strong>Currently Working On:</strong></p>
    <ul>
@@ -182,7 +187,7 @@
    <li>Exploring AI applications in healthcare and other fields</li>
    </ul>
    </div>
-   
+   </section>
 <div class="card" style="width: fit-content;background-color: #9c703e;">
    <p><strong>Things i am proud of (Not Perfect)</strong></p>
    <ul>
@@ -200,52 +205,58 @@
       
    </ul>
 </div>
-</div>
+</div></section>
 </body>
 
-<footer style="background-color: burlywood;border-radius: 20px;">
-    <div class="footer-container">
-    <div class="footer-card">
-        <h2>Send a Message</h2>
-        <form action="https://formspree.io/f/mwvelqol" method="POST" class="contact-form">
-            <input type="text" name="name" placeholder="Your Name" required>
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-            <input type="hidden" name="_next" value="https://zohatanveer789.github.io/ZohaTanveer786.github.io/contact.html">
-            <button type="submit">Send Message</button>
-        </form>
+<footer class="portfolio-footer">
+  <div class="footer-container">
+    <div class="footer-content">
+      <div class="footer-brand">
+        <h3>Zoha Tanveer</h3>
+        <p>Aspiring AI Engineer & Data Scientist</p>
+      </div>
+      <div class="social-links">
+        <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank">
+              <img src="images/linkdin-logo.png"alt="LinkedIn">
+               </a>
+               <a href="https://github.com/zohatanveer789" target="_blank">
+              <img src="images/github-logo.png" alt="GitHub">
+             </a>
+              <a href="mailto:zohatanveer2006@gmail.com">
+             <img src="images/e mail-logo.png" alt="Email">
+              </a>
+      </div>
     </div>
+    
+    <div class="footer-links">
+      <div class="link-column">
+        <h4>Portfolio</h4>
+        <ul>
+          <li><a href="#about-section">About Me</a></li>
+          <li><a href="#education-section">Education</a></li>
+          <li><a href="#skills-section">Skills</a></li>
+          <li><a href="#journey-section">My Journey</a></li>
+          <li><a href="#Working-section"> Current Workings</a></li>
+          <li><a href="project.html"> My Projects</a></li>
+          <li><a href="contact.html"> Contact Me</a></li>
 
-    <div class="footer-card">
-        <h2>Connect With Me</h2>
-        <p>Feel free to reach out via email or follow my professional journey online.</p>
-        <div class="social-links">
-            <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank"><img src="images/linkdin-logo.png" alt="LinkedIn"></a>
-            <a href="https://github.com/zohatanveer789" target="_blank"><img src="images/github-logo.png" alt="GitHub"></a>
-            <a href="mailto:zohatanveer2006@gmail.com"><img src="images/e mail-logo.png" alt="Email"></a>
-        </div>
-        <div class="links">
-            <a href="https://www.linkedin.com/in/zoha-tanveer-49356a206" target="_blank"><button>LinkedIn</button></a>
-            <a href="https://github.com/zohatanveer789" target="_blank"><button>GitHub</button></a>
-            <a href="mailto:zohatanveer2006@gmail.com"><button>E-mail</button></a>
-        </div>
-    </div>
 
-    <div class="footer-card">
-        <h2>Go Back</h2>
-        <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="#main-container-journey">Contact Me</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
         </ul>
+      </div>
+      <div class="link-column">
+        <h4>Contact</h4>
+        <ul>
+          <li><a href="mailto:zohatanveer2006@gmail.com">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/zoha-tanveer-49356a206">Linkdin</a></li>
+          <li><a href="https://github.com/zohatanveer789">Git-hub</a></li>
+        </ul>
+      </div>
     </div>
-</div>
-    <p class="copyright" style="text-align: center;">&copy; 2025 Zoha Tanveer. All rights reserved.</p>
+  </div>
+  <div class="footer-bottom">
+    <p>&copy; 2025 Zoha Tanveer. All rights reserved. | Built in Lahore, Pakistan</p>
+  </div>
 </footer>
-
-
-  
 
 
 
