--- a/contact.html
+++ b/contact.html
@@ -59,14 +59,14 @@
                 </div> 
             
             </div> 
-            <div class="card" style="text-decoration: none;">
+            <div class="card" style="text-decoration: none;color: black;">
         <h2>Portfolio</h2>
         <ul style="text-decoration: none;">
-          <li><a href="#about-section">About Me</a></li><br>
-          <li><a href="#education-section">Education</a></li><br>
-          <li><a href="#skills-section">Skills</a></li><br>
-          <li><a href="#journey-section">My Journey</a></li><br>
-          <li><a href="#Working-section"> Current Workings</a></li><br>
+          <li><a href="about.html#about-section">About Me</a></li><br>
+          <li><a href="about.html#education-section">Education</a></li><br>
+          <li><a href="about.html#skills-section">Skills</a></li><br>
+          <li><a href="about.html#journey-section">My Journey</a></li><br>
+          <li><a href="about.html#working-section"> Current Workings</a></li><br>
           <li><a href="project.html"> My Projects</a></li><br>
           <li><a href="contact.html"> Contact Me</a></li><br>
 
