Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
  <div class="main-container-journey">
 <div class="hobby-card" style="background-color: #a4a5a4;">
- <p ><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zoha_tanveer" target="_blank" style="color: black; text-decoration: none;"><strong>Check it out</strong></a></p>
+ <p ><strong>My Hobby</strong><br>Photography <br>When you have a camera in your hand, you start noticing the "small things"—the way light hits a building at sunset, the intricate patterns of a leaf, or a fleeting expression on a stranger's face. <br><a href="https://www.instagram.com/zunzet____?utm_source=qr&igsh=YjVidmk5OWpueGZu" target="_blank" style="color: black; text-decoration: none;"><strong>Check it out</strong></a></p>
 
  </div>
  <div class="hobby-card" style="background-color:#E6D3B1;">
@@ -311,3 +311,4 @@
   </div>
 </footer>
 </html>
+
