--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
             <div class="card" style="max-width: 2000px;">
                 <h2>Connect With Me</h2>
-                <p>Feel free to reach out via email or follow my professional journey online.</p>
+                <p>If you're building, learning, or just curious — say hi or follow my professional journey online.</p>
                 <br>
 
             <div class="social-links">
