--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br><br>
         <a href="project.html"><button style="justify-content: center;text-align: center;">Explore My Work</button></a>
     </div>
-    <br><br><br><br><br>
+    <br><br><br><br><br><br><br>
 
     <p style="text-align: left;">📍Lahore, Pakistan ✉️ <a href="mailto:zohatanveer2006@gmail.com" style="text-decoration: none;color: black;">zohatanveer2006@gmail.com</a></p>
     <br><br>
@@ -260,6 +260,8 @@
         <br>
         <a href="https://zohatanveer789.github.io/ZohaTanveer786.github.io/" target="_blank">
         <button>Click here for a demo</button></a>
+        <button onclick="topFunction()" id="topBtn">Go back</button>
+<script src="script.js"></script>
 </body>
 <footer class="portfolio-footer">
   <div class="footer-container">
@@ -303,12 +305,13 @@
           <li><a href="https://www.linkedin.com/in/zoha-tanveer-49356a206">Linkdin</a></li>
           <li><a href="https://github.com/zohatanveer789">Git-hub</a></li>
         </ul>
+       
       </div>
     </div>
   </div>
+  
   <div class="footer-bottom">
     <p>&copy; 2025 Zoha Tanveer. All rights reserved. | Built in Lahore, Pakistan</p>
   </div>
 </footer>
 </html>
-
