--- a/about.html
+++ b/about.html
@@ -222,6 +222,9 @@
                <a href="https://github.com/zohatanveer789" target="_blank">
               <img src="images/github-logo.png" alt="GitHub">
              </a>
+             <a href="https://www.fiverr.com/s/Zm3GvR8">
+              <img src="images/fiver-logo.png" alt="Fiverr">
+             </a>
               <a href="mailto:zohatanveer2006@gmail.com">
              <img src="images/e mail-logo.png" alt="Email">
               </a>
@@ -249,6 +252,7 @@
           <li><a href="mailto:zohatanveer2006@gmail.com">Email</a></li>
           <li><a href="https://www.linkedin.com/in/zoha-tanveer-49356a206">Linkdin</a></li>
           <li><a href="https://github.com/zohatanveer789">Git-hub</a></li>
+          <li><a href="https://www.fiverr.com/s/Zm3GvR8">Fiverr</a></li>
         </ul>
       </div>
     </div>
