--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
         <a href="#skills-section">Skills</a>
         <a href="#journey-section">My Journey</a>
         <a href="project.html">Projects</a>
+        <a href="articles.html">Blogs</a>
         <a href="contact.html">Contact</a>
  </nav>  
  
