--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
         <a href="about.html#skills-section">Skills</a>
         <a href="about.html#journey-section">My Journey</a>
         <a href="project.html">Projects</a>
+        <a href="articles.html">Blogs</a>
         <a href="contact.html">Contact</a>
         </nav>  
       
