--- a/project.html
+++ b/project.html
@@ -9,9 +9,10 @@
         <nav>    
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="#skills-section">Skills</a>
-        <a href="#journey-section">My Journey</a>
+        <a href="index.html#skills-section">Skills</a>
+        <a href="index.html#journey-section">My Journey</a>
         <a href="project.html">Projects</a>
+        <a href="articles.html">Blogs</a>
         <a href="contact.html">Contact</a>
       </nav> 
         <h1>My Projects</h1>
